crates/rattler/src/install/snapshots/rattler__install__test__link_package_from_archive-bzip2.snap
---
source: crates/rattler/src/install/mod.rs
assertion_line: 942
expression: paths
snapshot_kind: text
---
- _path: bin/bunzip2
  path_type: hardlink
  sha256: 04f60342b7332b849c3d0e3896322c3b92d8bcfc822c3be0ffd80332b3c223d4
  sha256_in_prefix: 04f60342b7332b849c3d0e3896322c3b92d8bcfc822c3be0ffd80332b3c223d4
  size_in_bytes: 366552
- _path: bin/bzcat
  path_type: hardlink
  sha256: 04f60342b7332b849c3d0e3896322c3b92d8bcfc822c3be0ffd80332b3c223d4
  sha256_in_prefix: 04f60342b7332b849c3d0e3896322c3b92d8bcfc822c3be0ffd80332b3c223d4
  size_in_bytes: 366552
- _path: bin/bzcmp
  path_type: softlink
  sha256: 1c1f96193cdf14b85ea65f140a7557a07ece8783a53ec5ba6b5c30644a9d3012
  sha256_in_prefix: d5e2951edcc0388feda0726ee69b5ac079bf91e4bc79ce095b34a56b38db29b7
  size_in_bytes: 2140
- _path: bin/bzdiff
  path_type: hardlink
  sha256: 1c1f96193cdf14b85ea65f140a7557a07ece8783a53ec5ba6b5c30644a9d3012
  sha256_in_prefix: 1c1f96193cdf14b85ea65f140a7557a07ece8783a53ec5ba6b5c30644a9d3012
  size_in_bytes: 2140
- _path: bin/bzegrep
  path_type: softlink
  sha256: a8e368a31766c7862b8d0feeffe274c3bb43b969e3ccb4f9e77d13bfa447a5c9
  sha256_in_prefix: aa3149e6182875b6fc8b393c9b556fa49427b8732e87c5def2e109904143caa3
  size_in_bytes: 2054
- _path: bin/bzfgrep
  path_type: softlink
  sha256: a8e368a31766c7862b8d0feeffe274c3bb43b969e3ccb4f9e77d13bfa447a5c9
  sha256_in_prefix: aa3149e6182875b6fc8b393c9b556fa49427b8732e87c5def2e109904143caa3
  size_in_bytes: 2054
- _path: bin/bzgrep
  path_type: hardlink
  sha256: a8e368a31766c7862b8d0feeffe274c3bb43b969e3ccb4f9e77d13bfa447a5c9
  sha256_in_prefix: a8e368a31766c7862b8d0feeffe274c3bb43b969e3ccb4f9e77d13bfa447a5c9
  size_in_bytes: 2054
- _path: bin/bzip2
  path_type: hardlink
  sha256: 04f60342b7332b849c3d0e3896322c3b92d8bcfc822c3be0ffd80332b3c223d4
  sha256_in_prefix: 04f60342b7332b849c3d0e3896322c3b92d8bcfc822c3be0ffd80332b3c223d4
  size_in_bytes: 366552
- _path: bin/bzip2recover
  path_type: hardlink
  sha256: 0eacb81fcff1adb72a67efa1f01074c3119ff46709187eada93560533412b38b
  sha256_in_prefix: 0eacb81fcff1adb72a67efa1f01074c3119ff46709187eada93560533412b38b
  size_in_bytes: 35896
- _path: bin/bzless
  path_type: softlink
  sha256: 836536d4c7469788c730355d59f8ae8d16ba07cb0754174878d99ed90f04448d
  sha256_in_prefix: 97fc73f3676c65ae05a49cad2afb3126a00baf9dbf2613996e3b95eac6364c32
  size_in_bytes: 1259
- _path: bin/bzmore
  path_type: hardlink
  sha256: 836536d4c7469788c730355d59f8ae8d16ba07cb0754174878d99ed90f04448d
  sha256_in_prefix: 836536d4c7469788c730355d59f8ae8d16ba07cb0754174878d99ed90f04448d
  size_in_bytes: 1259
- _path: include/bzlib.h
  path_type: hardlink
  sha256: 6ac62e811669598ee30c9e1c379b9e627f6ff17a5a3dc1e0b4fa8b8ea75e580d
  sha256_in_prefix: 6ac62e811669598ee30c9e1c379b9e627f6ff17a5a3dc1e0b4fa8b8ea75e580d
  size_in_bytes: 6240
- _path: lib/libbz2.a
  path_type: hardlink
  sha256: ece8562c4d98e21896056c3f195f0f1b0afed89188fc0e17a8ca53664c28d5bf
  sha256_in_prefix: ece8562c4d98e21896056c3f195f0f1b0afed89188fc0e17a8ca53664c28d5bf
  size_in_bytes: 371082
- _path: lib/libbz2.so
  path_type: softlink
  sha256: d24341372acf8be384d59dedca008fa3052d7d2deab7f8e79410f73383d15b28
  sha256_in_prefix: 7136a6a39c8e423501e3cefc44a552170b1e996ffd43185357640572e3d38394
  size_in_bytes: 286272
- _path: lib/libbz2.so.1.0
  path_type: softlink
  sha256: d24341372acf8be384d59dedca008fa3052d7d2deab7f8e79410f73383d15b28
  sha256_in_prefix: 7136a6a39c8e423501e3cefc44a552170b1e996ffd43185357640572e3d38394
  size_in_bytes: 286272
- _path: lib/libbz2.so.1.0.8
  path_type: hardlink
  sha256: d24341372acf8be384d59dedca008fa3052d7d2deab7f8e79410f73383d15b28
  sha256_in_prefix: d24341372acf8be384d59dedca008fa3052d7d2deab7f8e79410f73383d15b28
  size_in_bytes: 286272
- _path: man/man1/bzcmp.1
  path_type: hardlink
  sha256: 172cde42c47a6d50c244e39d993097dcd3882427d57303078643849cf10a81c4
  sha256_in_prefix: 172cde42c47a6d50c244e39d993097dcd3882427d57303078643849cf10a81c4
  size_in_bytes: 18
- _path: man/man1/bzdiff.1
  path_type: hardlink
  sha256: 32d1a7cd115430398e58537532584ef2ab76343c9f094dcd1253d9c4c0f705bf
  sha256_in_prefix: 32d1a7cd115430398e58537532584ef2ab76343c9f094dcd1253d9c4c0f705bf
  size_in_bytes: 897
- _path: man/man1/bzegrep.1
  path_type: hardlink
  sha256: cf1c98d3fa055506c8af2f8bba4da9c17d367c6409c6ad83a2bc67ccb6630182
  sha256_in_prefix: cf1c98d3fa055506c8af2f8bba4da9c17d367c6409c6ad83a2bc67ccb6630182
  size_in_bytes: 18
- _path: man/man1/bzfgrep.1
  path_type: hardlink
  sha256: cf1c98d3fa055506c8af2f8bba4da9c17d367c6409c6ad83a2bc67ccb6630182
  sha256_in_prefix: cf1c98d3fa055506c8af2f8bba4da9c17d367c6409c6ad83a2bc67ccb6630182
  size_in_bytes: 18
- _path: man/man1/bzgrep.1
  path_type: hardlink
  sha256: 924aa4a7c7c1467400181e4c0ee1b527db142b6399a717171f2351b72b5899df
  sha256_in_prefix: 924aa4a7c7c1467400181e4c0ee1b527db142b6399a717171f2351b72b5899df
  size_in_bytes: 1297
- _path: man/man1/bzip2.1
  path_type: hardlink
  sha256: 27b984bb2e8bbee2651d11cda87449cfc4138d2e479b9eaa77b8f60fa5d0bf5d
  sha256_in_prefix: 27b984bb2e8bbee2651d11cda87449cfc4138d2e479b9eaa77b8f60fa5d0bf5d
  size_in_bytes: 16266
- _path: man/man1/bzless.1
  path_type: hardlink
  sha256: 216898f9b8acf61eeb471ecf23e47c1452dfd648f7f38d7d3bf48627072dc52c
  sha256_in_prefix: 216898f9b8acf61eeb471ecf23e47c1452dfd648f7f38d7d3bf48627072dc52c
  size_in_bytes: 18
- _path: man/man1/bzmore.1
  path_type: hardlink
  sha256: ccfcf3f995e11adae3035e287252091bb72d165da21e0c385a4965d17c9051c7
  sha256_in_prefix: ccfcf3f995e11adae3035e287252091bb72d165da21e0c385a4965d17c9051c7
  size_in_bytes: 4310
