crates/rattler/src/install/snapshots/rattler__install__test__link_package_from_archive-clobber-tar-bz2.snap
---
source: crates/rattler/src/install/mod.rs
assertion_line: 937
expression: paths
snapshot_kind: text
---
- _path: another-clobber.txt
  path_type: hardlink
  sha256: dd79cf28afefb8038e9ca3141f2d47ca3c764cd50b880eb65263705792b909c8
  sha256_in_prefix: dd79cf28afefb8038e9ca3141f2d47ca3c764cd50b880eb65263705792b909c8
  size_in_bytes: 10
- _path: clobber.txt
  path_type: hardlink
  sha256: dd79cf28afefb8038e9ca3141f2d47ca3c764cd50b880eb65263705792b909c8
  sha256_in_prefix: dd79cf28afefb8038e9ca3141f2d47ca3c764cd50b880eb65263705792b909c8
  size_in_bytes: 10
