crates/rattler/src/install/snapshots/rattler__install__test__link_package_from_archive-ruff.snap
---
source: crates/rattler/src/install/mod.rs
assertion_line: 942
expression: paths
snapshot_kind: text
---
- _path: Lib/site-packages/ruff-0.0.171.dist-info/INSTALLER
  path_type: hardlink
  sha256: d0edee15f91b406f3f99726e44eb990be6e34fd0345b52b910c568e0eef6a2a8
  sha256_in_prefix: d0edee15f91b406f3f99726e44eb990be6e34fd0345b52b910c568e0eef6a2a8
  size_in_bytes: 5
- _path: Lib/site-packages/ruff-0.0.171.dist-info/METADATA
  path_type: hardlink
  sha256: fba95fb4a3bb15c300e3950b2b912425b0163a9e8e2faae8a68d867bdfec7819
  sha256_in_prefix: fba95fb4a3bb15c300e3950b2b912425b0163a9e8e2faae8a68d867bdfec7819
  size_in_bytes: 77203
- _path: Lib/site-packages/ruff-0.0.171.dist-info/RECORD
  path_type: hardlink
  sha256: b821cd5c255c078e53c904846b95e0bd9f73bc7764538cf9fd1181b8d7c2b628
  sha256_in_prefix: b821cd5c255c078e53c904846b95e0bd9f73bc7764538cf9fd1181b8d7c2b628
  size_in_bytes: 896
- _path: Lib/site-packages/ruff-0.0.171.dist-info/REQUESTED
  path_type: hardlink
  sha256: e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
  sha256_in_prefix: e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
  size_in_bytes: 0
- _path: Lib/site-packages/ruff-0.0.171.dist-info/WHEEL
  path_type: hardlink
  sha256: 48809079c83d2fc9b7581bb1a3ea375f6eaea7074b0a722c0ada479f78d54f35
  sha256_in_prefix: 48809079c83d2fc9b7581bb1a3ea375f6eaea7074b0a722c0ada479f78d54f35
  size_in_bytes: 94
- _path: Lib/site-packages/ruff-0.0.171.dist-info/direct_url.json
  path_type: hardlink
  sha256: 88d97db3dccb9ab7f8ff5a8d3c3405297e111364375ccd848a9966906c900d6a
  sha256_in_prefix: 88d97db3dccb9ab7f8ff5a8d3c3405297e111364375ccd848a9966906c900d6a
  size_in_bytes: 119
- _path: Lib/site-packages/ruff-0.0.171.dist-info/license_files/LICENSE
  path_type: hardlink
  sha256: 0891ad47212cb60b4d5f277b3b18fd44f8c3501d2612bbac0325bd332173d49e
  sha256_in_prefix: 0891ad47212cb60b4d5f277b3b18fd44f8c3501d2612bbac0325bd332173d49e
  size_in_bytes: 30157
- _path: Lib/site-packages/ruff/__init__.py
  path_type: hardlink
  sha256: e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
  sha256_in_prefix: e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
  size_in_bytes: 0
- _path: Lib/site-packages/ruff/__main__.py
  path_type: hardlink
  sha256: 86de2c033f7285b67662e60d06ee9837c0fd9ba128a72bb271eb6d1f75c4f902
  sha256_in_prefix: 86de2c033f7285b67662e60d06ee9837c0fd9ba128a72bb271eb6d1f75c4f902
  size_in_bytes: 193
- _path: Lib/site-packages/ruff/__pycache__/__init__.cpython-310.pyc
  path_type: hardlink
  sha256: 9c830b0cbcd46189b34cabed42a002bd0faeba9abdd48979079dec18bdfb540e
  sha256_in_prefix: 9c830b0cbcd46189b34cabed42a002bd0faeba9abdd48979079dec18bdfb540e
  size_in_bytes: 160
- _path: Lib/site-packages/ruff/__pycache__/__init__.cpython-311.pyc
  path_type: hardlink
  sha256: 890732d0bad13b143e69f22d2e81e11ce746f225a418f0382fc153cfcabf7b35
  sha256_in_prefix: 890732d0bad13b143e69f22d2e81e11ce746f225a418f0382fc153cfcabf7b35
  size_in_bytes: 143
- _path: Lib/site-packages/ruff/__pycache__/__main__.cpython-310.pyc
  path_type: hardlink
  sha256: a212e166b246f05caa68ba296261d9b5ca3554a4c0f9b4b266c45759df7c5abd
  sha256_in_prefix: a212e166b246f05caa68ba296261d9b5ca3554a4c0f9b4b266c45759df7c5abd
  size_in_bytes: 383
- _path: Lib/site-packages/ruff/__pycache__/__main__.cpython-311.pyc
  path_type: hardlink
  sha256: da00646e8afbeca6ed78d3159d231e198dbf4950e92cec6cdf629e2fbd620a60
  sha256_in_prefix: da00646e8afbeca6ed78d3159d231e198dbf4950e92cec6cdf629e2fbd620a60
  size_in_bytes: 629
- _path: Scripts/ruff.exe
  path_type: hardlink
  sha256: 268820aa3008ea202b779382ac80b09d81ee1de26e72fdc5d0feca05b3d94e09
  sha256_in_prefix: 268820aa3008ea202b779382ac80b09d81ee1de26e72fdc5d0feca05b3d94e09
  size_in_bytes: 6896640
